# Bili23-Downloader-Loader

./: README.md  _pystand_static.int
.github/workflows/: buid.yml  build.yml
linux/: Bili23  Bili23.cpp
linux_macos/: CMakeLists.txt  loader.cpp
windows/: CMakeLists.txt  PyStand.cpp  PyStand.int  main.manifest  resource.rc
